--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.6",
     "@types/helmet": "^0.0.47",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.27",
+    "@types/nodemailer": "^6.4.0",
+    "@types/twilio": "^2.11.0",
     "babel-runtime": "^6.26.0",
     "gql-merge": "^0.0.6",
     "graphql-to-typescript": "^0.1.2",
@@ -18,7 +21,7 @@
     "predev": "yarn run types",
     "dev": "cd src &&nodemon --exec ts-node index.ts -e ts,graphql",
     "pretypes": "gql-merge --out-file ./src/schema.graphql ./src/api/**/*.graphql",
-    "types": "graphql-to-typescript ./src/schema.graphql ./src/types/graph.d.ts"
+    "types": "rm ./src/types/graph.d.ts && graphql-to-typescript ./src/schema.graphql ./src/types/graph.d.ts"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -28,9 +31,12 @@
     "graphql-tools": "^6.0.15",
     "graphql-yoga": "^1.18.3",
     "helmet": "^3.23.3",
+    "jsonwebtoken": "^8.5.1",
     "merge-graphql-schemas": "^1.7.8",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.11",
     "pg": "^8.3.0",
+    "twilio": "^3.48.2",
     "typeorm": "^0.2.25"
   }
 }
